# ru-chat-bot

./: .gitignore  LICENSE.txt  README.en.md  README.md  README.ru.md  pyproject.toml
src/chat_bot/: chat_bot.py
src/chat_bot/internal/: model.py  ner.py  nlu.py  phrases.py  small_talk.py  vectorizer.py
src/chat_bot/internal/intent/: date.py  news.py  time.py  weather.py  wiki.py
src/chat_bot/internal/text_utils/: __init__.py  preprocess.py  symbols.py  whitespaces.py
src/chat_bot/internal/utils/: date.py  validator.py
src/chat_bot/resources/: cities-synonyms.json  cities.json  dssm-answers.json  dssm-index.faiss  model.pt
